--- a/editor/editor.css
+++ b/editor/editor.css
@@ -60,8 +60,39 @@ header.editor-head {
 .editor-page-sidebar {
     width: var(--sidebar-width);
     padding-left: 10dvh;
+    padding-top: 5dvh;
 }
 
 .editor-page-content {
+    padding-top: 5dvh;
     flex-grow: 1;
+}
+
+/* Input styles */
+
+.editable-text-field {
+    display: block;
+    width: 75%;
+    line-height: 2em;
+    background-color: rgba(255, 255, 255, 0.05);
+    color: #ffffff;
+    border: none;
+    border-radius: 1em;
+    padding: 0.5em 1em;
+    margin-bottom: 1em;
+}
+
+.group-block {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    background-color: rgba(255, 255, 255, 0.05);
+    padding: 1em;
+    border-radius: 1em;
+    width: 75%;
+}
+
+.group-block .editable-text-field {
+    width: unset;
+    /* background-color: aqua; */
 }
