--- a/editor/editor.css
+++ b/editor/editor.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'agrandirregular', sans-serif;
+}
+
 html {
     --sidebar-width: 25dvw;
 }
@@ -12,7 +16,7 @@ body {
     margin: 0;
 }
 
-.save-button {
+.map-button {
     position: fixed;
     top: 0;
     right: 0;
@@ -49,6 +53,7 @@ header.editor-head {
     display: flex;
     align-items: center;
     flex-grow: 1;
+    padding-left: 5dvh;
 }
 
 .editor-page-container {
@@ -65,6 +70,7 @@ header.editor-head {
 
 .editor-page-content {
     padding-top: 5dvh;
+    padding-left: 5dvh;
     flex-grow: 1;
 }
 
@@ -74,12 +80,17 @@ header.editor-head {
     display: block;
     width: 75%;
     line-height: 2em;
-    background-color: rgba(255, 255, 255, 0.05);
+    background-color: rgba(255, 255, 255, 0.0);
     color: #ffffff;
-    border: none;
+    border: dashed 1px rgba(255, 255, 255, 0.25);
     border-radius: 1em;
     padding: 0.5em 1em;
-    margin-bottom: 1em;
+    /* margin-bottom: 1em; */
+}
+
+.editable-text-field.header {
+    font-size: 2em;
+    padding: 0 1em;
 }
 
 .group-block {
@@ -91,8 +102,98 @@ header.editor-head {
     border-radius: 1em;
     width: 75%;
 }
+.block-header {
+    display: flex;
+    justify-content: space-between;
+}
 
 .group-block .editable-text-field {
     width: unset;
     /* background-color: aqua; */
+}
+
+.block-add-button {
+    /* background-color: ; */
+}
+
+@font-face {
+    font-family: 'agrandirbold';
+    src: url('../fonts/agrandir-bold-webfont.woff2') format('woff2'),
+         url('../fonts/agrandir-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'agrandirbold_italic';
+    src: url('../fonts/agrandir-bolditalic-webfont.woff2') format('woff2'),
+         url('../fonts/agrandir-bolditalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'agrandiritalic';
+    src: url('../fonts/agrandir-italic-webfont.woff2') format('woff2'),
+         url('../fonts/agrandir-italic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'agrandirlight';
+    src: url('../fonts/agrandir-light-webfont.woff2') format('woff2'),
+         url('../fonts/agrandir-light-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'agrandirlight_italic';
+    src: url('../fonts/agrandir-lightitalic-webfont.woff2') format('woff2'),
+         url('../fonts/agrandir-lightitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'agrandirmedium';
+    src: url('../fonts/agrandir-medium-webfont.woff2') format('woff2'),
+         url('../fonts/agrandir-medium-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'agrandirmedium_italic';
+    src: url('../fonts/agrandir-mediumitalic-webfont.woff2') format('woff2'),
+         url('../fonts/agrandir-mediumitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'agrandirregular';
+    src: url('../fonts/agrandir-regular-webfont.woff2') format('woff2'),
+         url('../fonts/agrandir-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'gt_pressura_monobold';
+    src: url('../fonts/gt-pressura-mono-bold-webfont.woff2') format('woff2'),
+         url('../fonts/gt-pressura-mono-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'gt_pressura_monoregular';
+    src: url('../fonts/gt-pressura-mono-regular-webfont.woff2') format('woff2'),
+         url('../fonts/gt-pressura-mono-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
 }
